@@ -84,6 +84,9 @@ olecfinfo
 DEPLOYMENT
 * update manuals
 
+20150608
+* worked on format support
+
 20150413
 * improved support file without directory entries
 
